correction z-index menu

--- a/edition2018/styles/components/_header.scss
+++ b/edition2018/styles/components/_header.scss
@@ -54,6 +54,7 @@ input[type="radio"] {
 }
 
 .logo_menu {
+  z-index: 99;
 	position: absolute;
 	top: 13px;
   left: 0;
